--- a/index.html
+++ b/index.html
@@ -3,10 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=he, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <title>Bandwidth</title>
+
+    <!-- <style> 
+        table, td ,tr ,th{
+            border: 1px solid black;
+            border-collapse: collapse
+        }
+    </style> -->
+    <link rel="stylesheet" href="https://fonts.xz.style/serve/inter.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css">
+
+ </head>
 <body>
+    <header>
     <h1>Hey there!</h1>
-    
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+        <a href="https://wikipedia.com"target="blank">wikipedia</a>
+    </nav>
+    </header>
+    <main>
+        <h2>hey there</h2>
+        <p>To enable word wrap use <kbd>Ctrl+Shift+P</kbd> and then enable it.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat necessitatibus ratione cupiditate quidem quam veritatis error neque distinctio explicabo. Quia atque accusantium dolores sapiente amet voluptate consequuntur commodi magnam neque.</p>
+           <footer>
+            <h2>Details about Cloudflare</h2>
+            <table>
+                <thead>
+                   <tr>
+                       <th>s. no.</th>
+                       <th>Name</th>
+                       <th>Marks</th>
+                    </tr>
+                </thead>
+                <tbody>
+                      <tr>
+                         <td>1</td>
+                         <td>Bill</td>
+                         <td>30</td>
+                   </tr>
+                      <tr>
+                         <td>2</td>
+                         <td>seteve</td>
+                         <td>53</td>
+                   </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="2">Total</td>
+                        <td>83</td>
+                    </tr>
+                  </tfoot>
+            </table>
+            <p>copyright &copy; All right &lt;&gt; reserved.</p>
+        </footer>
 </body>
 </html>
